@@ -1,3 +1,9 @@
+Sun May  4 18:56:43 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* src/input.c (Input_GetString): Fix hexadecimal escape sequence.
+	Support \? and \' escape sequences.
+	* unittests/compare/core/string.s: Add & update test cases.
+
 Sun May  4 15:35:43 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* unittests/compare/core/def.s: Add disable & currently failing
